2006-08-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/inchi/: Update InChI library with final release of
	1.0.1. Need to update configure script to detect libinchi version
	to only build newer revisions when needed.

2006-08-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp (ParseComplex): Ensure complex
	expressions end in a ']' character. Added patch from Nick England
	for handling chiral output using OBChiralData. Should fix
	PR#1508741.

	* test/files/invalid-smarts.txt: Add additional complex expression
	for tests.

	* src/generic.cpp (OBUnitCell): Update lattice detection to use
	IsApprox instead of IsNear.

	* src/mol.cpp (PerceiveBondOrders): Ditto.

2006-08-04 Chris Morley <ob@gaseq.co.uk>
	
	* src/kinetics.h(OBRateData): Change constructor to fit in with
	the recent change in OBGenericData constructor.
	
2006-08-03 Chris Morley <ob@gaseq.co.uk>
	
	* src/formats/smilesformat.cpp (ParseSimple)(ParseComplex)
	Removed extension labelled "is this safe" and added support for
	* and [*] as wildcard elements. arom = false was also needed.
	
	src/kekulize.cpp(getorden): Treat Te (atNo=52) the same as Se.
	Allows c1cc[te]c1 to be interpreted as better rubbish.

2006-08-02 Chris Morley <ob@gaseq.co.uk>
	
	* src/formats/smilesformat.cpp (ParseSimple)(ParseComplex)
	Accept, with a warning, the illegal aromatic elements
	b [si] [ge] [sb] [bi] [te] [sn]
	
2006-07-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/cmlformat.cpp (BeginElement): Make sure to call
	BeginModify() on a <molecule> tag, since EndModify() is already
	called. Fixes PR#1512054 and probably PR#1523956.

2006-07-21 Chris Morley <ob@gaseq.co.uk>

	* src/obconversion.cpp(AddChemObject): remove compiler warning by
	returning Count!=0 rather than Count.
	
	* src.obutil.cpp(IsApprox): replaced fmin, which is not known to
	MS compiler, with std::min.

2006-07-20  Geoffrey Hutchison  <babel@geoffhutchison.net>
