@@ -1,3 +1,7 @@
+2006-08-30  Donald E. Curtis <dcurtis3@sourceforge.net>
+
+	* src/mol.cpp: Added OBMol::CreateResidue() function.
+
 2006-08-08  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/formats/inchi/: Update InChI library with final release of
